--- a/MyLab/pro/xTest/xTest.vcxproj
+++ b/MyLab/pro/xTest/xTest.vcxproj
@@ -40,7 +40,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;../../dep\libs;../../shr/GLUT;D:\boost_1_57_0\stage\lib;.\..\..\bin\Debug;$(LibraryPath)</LibraryPath>
-    <IncludePath>../../dep\libs_src\opencv\sources\modules\videoio\include;../../dep\libs_src\opencv\sources\modules\imgcodecs\include;../../dep\libs_src\opencv\sources\modules\hal\include;../../dep\libs_src\opencv\sources\modules\highgui\include;../../dep\libs_src\opencv\sources\modules\imgproc\include;../../dep\libs_src\opencv\sources\modules\core\include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;../../shr;../..\dep\libs_src\protobuf-2.6.1\src;../..\dep\libs_src;./test_boost;../..\dep\libs_src\pomelo2\include;../..\dep\libs_src\uv\include;D:\boost_1_57_0;../xServer\code\include;../xService\code\include;./;$(IncludePath)</IncludePath>
+    <IncludePath>../xTestEx/modules/include;../xTestEx/precompile;../../dep\libs_src\opencv\sources\modules\videoio\include;../../dep\libs_src\opencv\sources\modules\imgcodecs\include;../../dep\libs_src\opencv\sources\modules\hal\include;../../dep\libs_src\opencv\sources\modules\highgui\include;../../dep\libs_src\opencv\sources\modules\imgproc\include;../../dep\libs_src\opencv\sources\modules\core\include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;../../shr;../..\dep\libs_src\protobuf-2.6.1\src;../..\dep\libs_src;./test_boost;../..\dep\libs_src\pomelo2\include;../..\dep\libs_src\uv\include;D:\boost_1_57_0;../xServer\code\include;../xService\code\include;./;$(IncludePath)</IncludePath>
     <IntDir>.\..\..\bld\tmp\$(ProjectName)\Debug</IntDir>
     <OutDir>.\..\..\bin\Debug</OutDir>
   </PropertyGroup>
@@ -53,7 +53,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_MY_LAB; WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -78,6 +78,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="..\xTestEx\CMakeLists.txt" />
+    <None Include="..\xTestEx\cmake\common.cmake" />
+    <None Include="..\xTestEx\cmake\cotire.cmake" />
+    <None Include="..\xTestEx\modules\CMakeLists.txt" />
+    <None Include="..\xTestEx\modules\mod_001\CMakeLists.txt" />
+    <None Include="..\xTestEx\modules\mod_002\CMakeLists.txt" />
     <None Include="ReadMe.txt" />
     <None Include="test_js\test_cfg.json" />
     <None Include="test_lua\lua_test_config.lua" />
@@ -88,6 +94,10 @@
     <None Include="test_res\res.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\xTestEx\modules\include\test_define.h" />
+    <ClInclude Include="..\xTestEx\modules\mod_001\code\test_mod.h" />
+    <ClInclude Include="..\xTestEx\modules\mod_002\code\test_mod.h" />
+    <ClInclude Include="..\xTestEx\precompile\xPrecompile.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -116,6 +126,10 @@
     <ClInclude Include="xTest.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\xTestEx\modules\mod_001\code\test_mod.cpp" />
+    <ClCompile Include="..\xTestEx\modules\mod_002\code\test_mod.cpp" />
+    <ClCompile Include="..\xTestEx\precompile\xPrecompile.cpp" />
+    <ClCompile Include="..\xTestEx\xTestEx.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test1000_util.cpp" />
     <ClCompile Include="test1003_design.cpp" />
