--- a/MyLab/pro/xTest/xTest.vcxproj.filters
+++ b/MyLab/pro/xTest/xTest.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClInclude Include="test_battle\test_battle_RoleStatus.h">
       <Filter>test_battle\role</Filter>
     </ClInclude>
+    <ClInclude Include="test_battle\test_battle_RoleAi.h">
+      <Filter>test_battle\role</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -345,6 +348,9 @@
       <Filter>test_battle\role</Filter>
     </ClCompile>
     <ClCompile Include="test_battle\test_battle_RoleStatus.cpp">
+      <Filter>test_battle\role</Filter>
+    </ClCompile>
+    <ClCompile Include="test_battle\test_battle_RoleAi.cpp">
       <Filter>test_battle\role</Filter>
     </ClCompile>
   </ItemGroup>
