--- a/MyLab/pro/xTest/xTest.vcxproj.filters
+++ b/MyLab/pro/xTest/xTest.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClInclude Include="test_battle\test_battle_RoleAi.h">
       <Filter>test_battle\role</Filter>
     </ClInclude>
+    <ClInclude Include="test_battle\test_battle_RoleSkill.h">
+      <Filter>test_battle\role</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -351,6 +354,9 @@
       <Filter>test_battle\role</Filter>
     </ClCompile>
     <ClCompile Include="test_battle\test_battle_RoleAi.cpp">
+      <Filter>test_battle\role</Filter>
+    </ClCompile>
+    <ClCompile Include="test_battle\test_battle_RoleSkill.cpp">
       <Filter>test_battle\role</Filter>
     </ClCompile>
   </ItemGroup>
