--- a/MyLab/pro/xTest/xTest.vcxproj.filters
+++ b/MyLab/pro/xTest/xTest.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="test_battle\test_battle_RoleSkill.h">
       <Filter>test_battle\role</Filter>
     </ClInclude>
+    <ClInclude Include="test_battle\test_battle_RoleVoid.h">
+      <Filter>test_battle\role</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -357,6 +360,9 @@
       <Filter>test_battle\role</Filter>
     </ClCompile>
     <ClCompile Include="test_battle\test_battle_RoleSkill.cpp">
+      <Filter>test_battle\role</Filter>
+    </ClCompile>
+    <ClCompile Include="test_battle\test_battle_RoleVoid.cpp">
       <Filter>test_battle\role</Filter>
     </ClCompile>
   </ItemGroup>
