--- a/MyLab/pro/xTest/xTest.vcxproj
+++ b/MyLab/pro/xTest/xTest.vcxproj
@@ -106,12 +106,12 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="test_battle\script\test_battle_Script_task.h" />
+    <ClInclude Include="test_battle\script\test_battle_script_tool.h" />
     <ClInclude Include="test_battle\test_battle_.h" />
     <ClInclude Include="test_battle\test_battle_RoleAi.h" />
-    <ClInclude Include="test_battle\test_battle_RoleCommon.h" />
+    <ClInclude Include="test_battle\test_battle_RoleBase.h" />
     <ClInclude Include="test_battle\test_battle_Manager.h" />
-    <ClInclude Include="test_battle\test_battle_RoleSkill.h" />
-    <ClInclude Include="test_battle\test_battle_RoleStatus.h" />
+    <ClInclude Include="test_battle\test_battle_RoleAdvance.h" />
     <ClInclude Include="test_battle\test_battle_RoleVoid.h" />
     <ClInclude Include="test_battle\test_battle_Tool.h" />
     <ClInclude Include="test_battle\test_battle_Unit.h" />
@@ -170,12 +170,12 @@
     <ClCompile Include="test1001_db.cpp" />
     <ClCompile Include="test1002_math.cpp" />
     <ClCompile Include="test_battle\script\test_battle_script_task.cpp" />
+    <ClCompile Include="test_battle\script\test_battle_script_tool.cpp" />
     <ClCompile Include="test_battle\test_battle_.cpp" />
     <ClCompile Include="test_battle\test_battle_RoleAi.cpp" />
-    <ClCompile Include="test_battle\test_battle_RoleCommon.cpp" />
+    <ClCompile Include="test_battle\test_battle_RoleBase.cpp" />
     <ClCompile Include="test_battle\test_battle_Manager.cpp" />
-    <ClCompile Include="test_battle\test_battle_RoleSkill.cpp" />
-    <ClCompile Include="test_battle\test_battle_RoleStatus.cpp" />
+    <ClCompile Include="test_battle\test_battle_RoleAdvance.cpp" />
     <ClCompile Include="test_battle\test_battle_RoleVoid.cpp" />
     <ClCompile Include="test_battle\test_battle_Tool.cpp" />
     <ClCompile Include="test_battle\test_battle_Unit.cpp" />
