--- a/MyLab/pro/xTest/log4cxx.properties
+++ b/MyLab/pro/xTest/log4cxx.properties
@@ -17,7 +17,7 @@ log4j.appender.fa.layout.ConversionPattern=%d[%t] %-5p %.16c - %m%n
 #输出格式（layout）为PatternLayout
 log4j.appender.ca=org.apache.log4j.ConsoleAppender
 log4j.appender.ca.layout=org.apache.log4j.PatternLayout
-log4j.appender.ca.layout.ConversionPattern=%d[%t] %-5p %.16c - %m%n
+log4j.appender.ca.layout.ConversionPattern=%n%n%-5p %.16c - %m
 
 
 log4j.logger.logger0 = INFO, ap0  
