--- a/MyLab/pro/xTestEx/CMakeLists.txt
+++ b/MyLab/pro/xTestEx/CMakeLists.txt
@@ -7,6 +7,8 @@ SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 include(common)
 #CXX_OPTIONS()
 
+#SET (CMAKE_USE_RELATIVE_PATHS ON)
+
 PROJECT(MyLabEx)
 ADD_EXECUTABLE(xTestEx xTestEx.cpp precompile/xPrecompile.cpp)
 INCLUDE_DIRECTORIES("precompile")
