--- a/MyLab/pro/xCocos/proj.win32/xCocos.vcxproj
+++ b/MyLab/pro/xCocos/proj.win32/xCocos.vcxproj
@@ -157,7 +157,11 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\AStar_mask\PathSearchObject.cpp" />
     <ClCompile Include="..\Classes\AStar_mask\TgridImporter.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\Logic.cpp" />
+    <ClCompile Include="..\Classes\Scene2d.cpp" />
+    <ClCompile Include="..\Classes\Scene3d.cpp" />
     <ClCompile Include="..\Classes\Sprite3DTest\DrawNode3D.cpp" />
+    <ClCompile Include="..\Classes\Util.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -174,8 +178,12 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\AStar_mask\PathSearchObject.h" />
     <ClInclude Include="..\Classes\AStar_mask\TgridImporter.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\Logic.h" />
+    <ClInclude Include="..\Classes\Scene2d.h" />
+    <ClInclude Include="..\Classes\Scene3d.h" />
     <ClInclude Include="..\Classes\Sprite3DTest\DrawNode3D.h" />
     <ClInclude Include="..\Classes\testResource.h" />
+    <ClInclude Include="..\Classes\Util.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
