--- a/MyLab/pro/xCocos/proj.win32/xCocos.vcxproj
+++ b/MyLab/pro/xCocos/proj.win32/xCocos.vcxproj
@@ -65,7 +65,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LibraryPath>$(MSBuildProgramFiles32)\Microsoft SDKs\Windows\v7.1A\lib;$(LibraryPath)</LibraryPath>
-    <IncludePath>E:\QC-nd\svn\MyLab\trunk\MyLab\pro\xCocos\Classes\include;$(IncludePath)</IncludePath>
+    <IncludePath>../Classes\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LibraryPath>$(MSBuildProgramFiles32)\Microsoft SDKs\Windows\v7.1A\lib;$(LibraryPath)</LibraryPath>
